Fixed column reponsive issue on mobile screen

--- a/src/styles/Masonry.css
+++ b/src/styles/Masonry.css
@@ -3,8 +3,6 @@
   width: 98%;
   margin: 0 auto 10%;
   padding-top: 15px;
-  display: flex;
-  justify-content: center;
 }
 
 .cover__photo {
